off on save for now, esp until sync lua LS settings

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -65,6 +65,9 @@
   "languages": {
     "Markdown": {
       "soft_wrap": "editor_width"
+    },
+    "lua": {
+      "format_on_save": "off"
     }
   },
   "file_types": {
