--- a/.luarc.json
+++ b/.luarc.json
@@ -1,5 +1,6 @@
 {
-    "diagnostics.globals": [
-        "hs"
-    ]
+    // FYI I confirmed this works with both zed's lua extension and coc in nvim
+    //    just split a pane and comment out one of these globals
+    //    (both zed and nvim will almost instantly flip to a diagnostic error)
+    "diagnostics.globals": ["hs"]
 }
