--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -63,13 +63,8 @@
     // best way to test this config, open split view with config on top and on bottom a lua file with an issue, modify config and save it and it will refresh the lua file coc diagnostics immediately, but not if edited in another instance of VIM or not using VIM btw
     // the following config (workspace.library, runtime.version/path) were added to make vim globals work in coc-lua (not marked as undefined and have completions)
     "Lua.workspace.library": [
-        "/opt/homebrew/Cellar/neovim/0.10.3/share/nvim/runtime/lua",
-        "/opt/homebrew/Cellar/neovim/0.10.3/share/nvim/runtime/lua/vim/lsp",
-        "/Applications/Hammerspoon.app/Contents/Resources/extensions",
-        // "/Applications/Hammerspoon.app/Contents/Frameworks", // do I need this for any LSP features, these are dylib modules
-        "~/.luarocks/share/lua/5.4", // luarocks --local
-        "/opt/homebrew/share/lua/5.4/rx.lua", // luarocks --global (system wide)
-        // "/Applications/Hammerspoon.app/Contents/Resources/extensions", // doesn't work, don't try again unless you find good reason to
+        // *** ONLY use .luarc.json for project specific settings
+        // *** ONLY PUT paths for all repos/projects here
     ],
     // stop warning about luv:
     //   prompt:
