--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -162,4 +162,9 @@
         },
     },
     "snippets.ultisnips.pythonPrompt": false,
+
+
+    // *** POWERSHELL ***
+    "powershell.integratedConsole.showOnStartup": false,
+
 }
