--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,9 @@ trim_trailing_whitespace = true
 # https://github.com/CppCXY/EmmyLuaCodeStyle/blob/master/lua.template.editorconfig
 #   FYI using editorconfig for the formatter in the lua LS I am using (couldn't get defaultConfig to work in coc-settings.json)
 #   TODO IIAC I have to set per repo/workspace? or can I have a global editorconfig (in this dotfiles repo? - w.r.t. the formatter using editorconfig for its options)
+# TODO later... if I edit .editorconfig in a sep repo... suddenly its used for indent_size.. but then if I restart nvim, it reverts to what appears to be the settings here? or defaults?
+#  TODO can I get it to respect stylua for lua?
+indent_size = 2
 max_line_length = 200
 align_continuous_inline_comment = false
 # BTW zed lua extension works with this (as long as I load entire repo dir and not a subdir), cool
