--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,10 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 # end_of_line = lf
 
+[*.yaml]
+indent_size = 2
+
+
 [*.lua]
 # https://github.com/CppCXY/EmmyLuaCodeo#Style/blob/master/docs/format_config.md
 # https://github.com/CppCXY/EmmyLuaCodeStyle/blob/master/lua.template.editorconfig
