--- a/.luarc.json
+++ b/.luarc.json
@@ -23,8 +23,9 @@
         "/opt/homebrew/Cellar/neovim/0.10.3/share/nvim/runtime/lua/vim/lsp",
         "/Applications/Hammerspoon.app/Contents/Resources/extensions",
         // "/Applications/Hammerspoon.app/Contents/Frameworks", // do I need this for any LSP features, these are dylib modules
+
         "~/.luarocks/share/lua/5.4", // luarocks --local
-        "/opt/homebrew/share/lua/5.4/rx.lua" // luarocks --global (system wide)
+        "/opt/homebrew/share/lua/5.4/", // luarocks --global (IIAC luarocks links here too?)
         // "/Applications/Hammerspoon.app/Contents/Resources/extensions", // doesn't work, don't try again unless you find good reason to
     ],
 
