--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -34,10 +34,10 @@
             "url": "https://raw.githubusercontent.com/LuaLS/vscode-lua/master/setting/schema.json"
         }
     ],
-    "json.validate.enable": false, // I don't care much about json validation... this shuts it up about commas/comments
-    // if I could I would disable rules about "comments" and "trailing commas" but I can't find how to do that with coc-json
-    // BTW see filetypemods.lua to map json files to jsonc to stop comment spamming
-    // BTW to see what services are running for current window/buffer:  :CocList services
+    "json.validate.enable": false, // really only care about completions/formatting for json
+    // - if I could I would disable rules about "comments" and "trailing commas" but I can't find how to do that with coc-json
+    // - BTW see filetypemods.lua to map json files to jsonc to stop comment spamming (use this if you wanna go back to validating json files)
+    // - BTW to see what services are running for current window/buffer:  :CocList services
     //
     // * prettier instead => NO:
     // - trim trailing commas (i.e. in this file, I like it when allowed, that said often its not allowed and then fails stuff so I am on fence)
