--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "neovim>=0.3.1",
     "openai>=1.58.1",
     "pyperclip>=1.9.0",
+    "rich>=13.9.4",
     "rope>=1.13.0",
     "yapf>=0.43.0",
 ]
