--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "debugpy>=1.8.11",
     "httpx>=0.28.1",
+    "ipython>=9.0.2",
     "iterm2>=2.9",
     "keyring>=25.6.0",
     "keyrings-cryptfile>=1.3.9",
