--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -12,7 +12,7 @@
     //   "available_models": [
     //     {
     //       "provider": "openai",
-    //       "name": "llama-3.1-70b-versatile",
+    //       "name": "meta-llama/llama-4-scout-17b-16e-instruct",
     //       "max_tokens": 128000
     //     }
     //   ]
