--- a/.luarc.json
+++ b/.luarc.json
@@ -26,8 +26,7 @@
     // FYI I had to quit/restart zed to get new workspace.library paths to start working with Find Ref (F12)
     // nvim diagnostics refresh without restart, in a few seconds max:
     "workspace.library": [
-        "/opt/homebrew/Cellar/neovim/0.11.0/share/nvim/runtime/lua",
-        "/opt/homebrew/Cellar/neovim/0.11.0/share/nvim/runtime/lua/vim/lsp",
+        "$VIMRUNTIME",
         "/Applications/Hammerspoon.app/Contents/Resources/extensions",
         // "/Applications/Hammerspoon.app/Contents/Frameworks", // do I need this for any LSP features, these are dylib modules
 
